--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1> Git Project Pertamaku </h1>
     <h2> Membuat file project baru </h2>
     <p> ini adalah git project pertamaku dengan membuat file baru </p>
+    <p>Saya sedang belajar di lab bersama bu Yesta</p>
 </body>
 </html>
